fix text overflow

--- a/src/app/components/upload-file-page/upload-file-page.component.scss
+++ b/src/app/components/upload-file-page/upload-file-page.component.scss
@@ -5,6 +5,7 @@
   position: relative;
   margin: 0 auto;
   height: 200px;
+  overflow: scroll;
 
   input {
     opacity: 0;
@@ -41,6 +42,11 @@
     -webkit-hyphens: auto;
     hyphens: auto;
   }
+}
+
+ng-template {
+  display: inline-block;
+  height: 180px;
 }
 
 .fileover {
